Issue with image on about me page. Issue also fixed on project page where the project div was too large for phones.

--- a/src/AboutMe.scss
+++ b/src/AboutMe.scss
@@ -52,7 +52,6 @@
     order: 0;
     position: relative;
     width: 317px;
-    height: 416px;
     background-image: url("https://cdn.rawgit.com/NumaKarolinski/PersonalWebsite/websiteVersion1.2/src/SourceImages/good_numa_photo.png");
     background-repeat: no-repeat;
     background-size: cover;
