--- a/src/Projects.scss
+++ b/src/Projects.scss
@@ -37,7 +37,6 @@
 
 .aProjectDiv{
     margin: 5px auto;
-    padding: 7px;
     border: 10px solid #806090;
     border-radius: 5px;
     display: inline-flex;
